--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -20,19 +20,11 @@ if (!friendsPost) {
 const { Content } = await render(friendsPost);
 const items = [
 	{
-		title: "Astro",
-		imgurl: "https://avatars.githubusercontent.com/u/44914786?v=4&s=640",
-		desc: "The web framework for content-driven websites. ⭐️ Star to support our work!",
-		siteurl: "https://github.com/withastro/astro",
-		tags: ["Framework"],
-	},
-	{
-		title: "Mizuki Docs",
-		imgurl:
-			"http://q.qlogo.cn/headimg_dl?dst_uin=3231515355&spec=640&img_type=jpg",
-		desc: "Mizuki User Manual",
-		siteurl: "https://docs.mizuki.mysqil.com",
-		tags: ["Docs"],
+		title: "rinai-白色季节",
+		imgurl: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEDUn5o63KP2UjZ0ogvFWlyqApi9aVugQACsRgAAtUQYVdYtbtWqk8BfTYE.jpg",
+		desc: "cyjj的博客，suki,desuki😘😘",
+		siteurl: "https://blog.g-rinai.cn/",
+		tags: ["大蛇"],
 	},
 ];
 
