fix:修复了部分时间错误

--- a/src/pages/diary.astro
+++ b/src/pages/diary.astro
@@ -14,8 +14,8 @@ const moments = [
 	{
 		id: 1,
 		content:
-			"The falling speed of cherry blossoms is five centimeters per second!",
-		date: "2025-01-15T10:30:00Z",
+			"新的博客，新的小记，或许会在这里倾吐一些话",
+		date: "2025-10-30T23:11:00Z",
 		images: ["/images/diary/sakura.jpg", "/images/diary/1.jpg"],
 	},
 ];
